viewControllerとstoryboard切り分け修正

--- a/SimplePFC/Base.lproj/Main.storyboard
+++ b/SimplePFC/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NEg-fJ-wCc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8eR-bb-RlW">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
@@ -16,68 +16,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="25N-94-J1q">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ACE-jQ-sWu">
                                 <rect key="frame" x="0.0" y="103" width="393" height="715"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="6O8-o3-WRw">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="715"/>
-                                        <subviews>
-                                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6oV-BH-1PB">
-                                                <rect key="frame" x="0.0" y="0.0" width="393" height="715"/>
-                                                <connections>
-                                                    <segue destination="ADL-kV-A3d" kind="show" id="rAb-Ck-7FG"/>
-                                                </connections>
-                                            </containerView>
-                                        </subviews>
-                                    </stackView>
+                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="thv-hO-WF0">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="1000"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1000" id="45a-vc-MA9"/>
+                                        </constraints>
+                                        <connections>
+                                            <segue destination="nQ8-a0-V0C" kind="embed" id="GFf-m2-prq"/>
+                                        </connections>
+                                    </containerView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="6O8-o3-WRw" firstAttribute="top" secondItem="Go1-Ph-D7f" secondAttribute="top" id="8PE-Zv-II4"/>
-                                    <constraint firstItem="6O8-o3-WRw" firstAttribute="width" secondItem="gT9-hj-Y57" secondAttribute="width" id="OUA-IL-CtD"/>
-                                    <constraint firstItem="6O8-o3-WRw" firstAttribute="leading" secondItem="Go1-Ph-D7f" secondAttribute="leading" id="VCl-Ug-Ir2"/>
-                                    <constraint firstItem="6O8-o3-WRw" firstAttribute="bottom" secondItem="Go1-Ph-D7f" secondAttribute="bottom" id="Xf5-0d-MQ3"/>
-                                    <constraint firstItem="6O8-o3-WRw" firstAttribute="height" secondItem="gT9-hj-Y57" secondAttribute="height" id="nJc-zm-gpj"/>
-                                    <constraint firstItem="6O8-o3-WRw" firstAttribute="trailing" secondItem="Go1-Ph-D7f" secondAttribute="trailing" id="tOT-fX-UbD"/>
+                                    <constraint firstItem="thv-hO-WF0" firstAttribute="width" secondItem="cKn-t1-Q3K" secondAttribute="width" id="A77-ps-hvX"/>
+                                    <constraint firstItem="thv-hO-WF0" firstAttribute="bottom" secondItem="gsn-Ut-hdM" secondAttribute="bottom" id="E2t-Sp-wa4"/>
+                                    <constraint firstItem="thv-hO-WF0" firstAttribute="trailing" secondItem="gsn-Ut-hdM" secondAttribute="trailing" id="MdE-sI-HOu"/>
+                                    <constraint firstItem="thv-hO-WF0" firstAttribute="top" secondItem="gsn-Ut-hdM" secondAttribute="top" id="OUe-Lp-ZHR"/>
+                                    <constraint firstItem="thv-hO-WF0" firstAttribute="leading" secondItem="gsn-Ut-hdM" secondAttribute="leading" id="iTt-T1-q07"/>
                                 </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="Go1-Ph-D7f"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="gT9-hj-Y57"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="gsn-Ut-hdM"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="cKn-t1-Q3K"/>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="25N-94-J1q" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="7ZA-MR-LFt"/>
-                            <constraint firstItem="25N-94-J1q" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="EZz-4b-wq5"/>
-                            <constraint firstItem="25N-94-J1q" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="KQc-Ss-bZE"/>
-                            <constraint firstItem="25N-94-J1q" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Yi0-w9-GXS"/>
+                            <constraint firstItem="ACE-jQ-sWu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="CBr-ja-nJS"/>
+                            <constraint firstItem="ACE-jQ-sWu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="M8e-KV-pph"/>
+                            <constraint firstItem="ACE-jQ-sWu" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Px1-Hd-PgI"/>
+                            <constraint firstItem="ACE-jQ-sWu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ihY-XJ-mM3"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="シンプルPFC" id="9Gq-O9-lDB"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="959.5419847328244" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="1886.2595419847328" y="-27.464788732394368"/>
         </scene>
-        <!--Storyboard Reference-->
-        <scene sceneID="xqU-Ip-sER">
+        <!--contentStoryboard-->
+        <scene sceneID="81g-3N-osP">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="MealView" id="ADL-kV-A3d" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="6U0-EK-m0l"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2a5-bM-dKi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder referencedIdentifier="contentStoryboard" id="nQ8-a0-V0C" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9U4-Aa-eGW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1637" y="-27"/>
+            <point key="canvasLocation" x="2584" y="-27"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="Nt2-dY-yuI">
+        <scene sceneID="s6H-1s-NDS">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NEg-fJ-wCc" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8eR-bb-RlW" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5jk-LD-cuS">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="n3N-UD-0qr">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <navigationBarAppearance key="scrollEdgeAppearance">
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" systemColor="systemMintColor"/>
                             <textAttributes key="titleTextAttributes">
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </textAttributes>
@@ -85,17 +80,20 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ize-h3-cCG"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="NLe-8j-Et2"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lDX-Ar-e1p" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ote-hq-keP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="32.824427480916029" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="959.5419847328244" y="-27.464788732394368"/>
         </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemMintColor">
+            <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
