--- a/SimplePFC/View/PFCView/showPFCView.xib
+++ b/SimplePFC/View/PFCView/showPFCView.xib
@@ -7,35 +7,42 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShowPFCView" customModule="SimplePFC" customModuleProvider="target">
+            <connections>
+                <outlet property="calorieLabel" destination="CLF-xO-aem" id="HDm-up-T9Q"/>
+                <outlet property="carbohydrateLabel" destination="wdF-yD-Lyf" id="AK8-li-DIg"/>
+                <outlet property="fatLabel" destination="nW6-sT-vPS" id="Gzc-1a-0su"/>
+                <outlet property="proteinLabel" destination="3m7-bB-sgO" id="30q-4u-6Ac"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="showPFCView" customModule="SimplePFC" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="363" height="140"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="373" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="gAU-N0-cA7">
-                    <rect key="frame" x="5" y="0.0" width="353" height="140"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="3Pi-O2-Lth">
+                    <rect key="frame" x="0.0" y="0.0" width="373" height="150"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SXz-BC-zA6">
-                            <rect key="frame" x="0.0" y="0.0" width="353" height="35"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CLF-xO-aem">
+                            <rect key="frame" x="0.0" y="0.0" width="373" height="37.666666666666664"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="utu-Gi-kGu">
-                            <rect key="frame" x="0.0" y="35" width="353" height="35"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3m7-bB-sgO">
+                            <rect key="frame" x="0.0" y="37.666666666666657" width="373" height="37.333333333333343"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xOe-wB-ZuR">
-                            <rect key="frame" x="0.0" y="70" width="353" height="35"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nW6-sT-vPS">
+                            <rect key="frame" x="0.0" y="75" width="373" height="37.666666666666657"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Psv-ut-qCx">
-                            <rect key="frame" x="0.0" y="105" width="353" height="35"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wdF-yD-Lyf">
+                            <rect key="frame" x="0.0" y="112.66666666666667" width="373" height="37.333333333333329"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
@@ -44,23 +51,15 @@
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" red="0.5" green="0.88216938044749149" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.47475044094786351" green="0.89499434075387974" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="gAU-N0-cA7" secondAttribute="trailing" constant="5" id="6tq-Ja-bZX"/>
-                <constraint firstItem="gAU-N0-cA7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="9dP-Q8-4xa"/>
-                <constraint firstAttribute="bottom" secondItem="gAU-N0-cA7" secondAttribute="bottom" id="R5p-vh-T2h"/>
-                <constraint firstItem="gAU-N0-cA7" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="Tmy-CG-D0y"/>
+                <constraint firstItem="3Pi-O2-Lth" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="7MO-mH-UAP"/>
+                <constraint firstAttribute="bottom" secondItem="3Pi-O2-Lth" secondAttribute="bottom" id="JyH-jk-NcM"/>
+                <constraint firstItem="3Pi-O2-Lth" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Nbt-bz-gSa"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="3Pi-O2-Lth" secondAttribute="trailing" id="b9T-4b-Iy2"/>
             </constraints>
-            <nil key="simulatedTopBarMetrics"/>
-            <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <connections>
-                <outlet property="calorieLabel" destination="SXz-BC-zA6" id="7B7-YL-Mkt"/>
-                <outlet property="carbohydrateLabel" destination="Psv-ut-qCx" id="vz2-c4-QUc"/>
-                <outlet property="fatLabel" destination="xOe-wB-ZuR" id="eVZ-b7-EwT"/>
-                <outlet property="proteinLabel" destination="utu-Gi-kGu" id="d89-65-atv"/>
-            </connections>
-            <point key="canvasLocation" x="91" y="-11"/>
+            <point key="canvasLocation" x="-135.1145038167939" y="-11.267605633802818"/>
         </view>
     </objects>
 </document>
